--- a/Notre Dame Television/Notre Dame Television-Info.plist
+++ b/Notre Dame Television/Notre Dame Television-Info.plist
@@ -20,6 +20,7 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
+				<string>icon_512.png</string>
 				<string>icon_iphone.png</string>
 				<string>icon_iphone_high.png</string>
 				<string>icon_ipad.png</string>
@@ -29,7 +30,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.grumblus.ndtv.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.grumblus.ndtv</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
